# llm-logic-layer

./: .gitignore  pyproject.toml
src/: main.py
src/exceptions/: custom_exceptions.py  exception_handler.py
src/metric_compute/: similarity_calculator.py
src/models/: api_model.py
src/test/: model_test.py
