[tool.poetry]
name = "llm-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
ray = "^2.40.0"
pydantic = "^2.10.4"
numpy = "^2.2.0"
scikit-learn = "^1.6.0"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
